src/less/common.less
@import "variables";
@import "mixins";
@import "mymixins";

.browserupgrade {
    margin: 0 0 0.2em;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
    text-align: center;
}

html, body {

}

/* Template-specific stuff
 *
 * Customizations just for the template; these are not necessary for anything
 * with disabling the responsiveness.
 */

/* Account for fixed navbar */
body {
    //min-width: 1080px;
    //position: relative;

    //font-weight: 300;
    //letter-spacing: -0.015em;
}

/**
* Generate .g-mt10, .g-mt-20, .g-mb10 classes
*/
@iterations: 15;

.margin-top-loop (@i) when (@i > 0) {
    .g-mt@{i}0 {
        margin-top: @i * 10px !important;
    }

    .margin-top-loop(@i - 1);
}

.margin-top-loop(@iterations);

.margin-bottom-loop (@i) when (@i > 0) {
    .g-mb@{i}0 {
        margin-bottom: @i * 10px !important;
    }

    .margin-bottom-loop(@i - 1);
}

.margin-bottom-loop(@iterations);

.margin-left-loop (@i) when (@i > 0) {
    .g-ml@{i}0 {
        margin-left: @i * 10px !important;
    }

    .margin-left-loop(@i - 1);
}

.margin-left-loop(@iterations);

.margin-right-loop (@i) when (@i > 0) {
    .g-mr@{i}0 {
        margin-right: @i * 10px !important;
    }

    .margin-right-loop(@i - 1);
}

.margin-right-loop(@iterations);

/**
* Generate .g-pt10, .g-pt20, .g-pb10 classes
*/

.padding-top-loop (@i) when (@i >= 0) {
    .g-pt@{i}0 {
        padding-top: @i * 10px !important;
    }

    .padding-top-loop(@i - 1);
}

.padding-top-loop(@iterations);

.padding-bottom-loop (@i) when (@i > 0) {
    .g-pb@{i}0 {
        padding-bottom: @i * 10px !important;
    }

    .padding-bottom-loop(@i - 1);
}

.padding-bottom-loop(@iterations);

.padding-left-loop (@i) when (@i > 0) {
    .g-pl@{i}0 {
        padding-left: @i * 10px !important;
    }

    .padding-left-loop(@i - 1);
}

.padding-left-loop(@iterations);

.padding-right-loop (@i) when (@i > 0) {
    .g-pr@{i}0 {
        padding-right: @i * 10px !important;
    }

    .padding-right-loop(@i - 1);
}

.padding-right-loop(@iterations);

.super-transition() {
    -webkit-transition: all 300ms cubic-bezier(0.815, 0.225, 0.510, 0.985);
    -moz-transition: all 300ms cubic-bezier(0.815, 0.225, 0.510, 0.985);
    -o-transition: all 300ms cubic-bezier(0.815, 0.225, 0.510, 0.985);
    transition: all 300ms cubic-bezier(0.815, 0.225, 0.510, 0.985); /* custom */

    -webkit-transition-timing-function: cubic-bezier(0.815, 0.225, 0.510, 0.985);
    -moz-transition-timing-function: cubic-bezier(0.815, 0.225, 0.510, 0.985);
    -o-transition-timing-function: cubic-bezier(0.815, 0.225, 0.510, 0.985);
    transition-timing-function: cubic-bezier(0.815, 0.225, 0.510, 0.985); /* custom */
}

.resizable-x {
    .resizable(horizontal);
}

.resizable-y {
    .resizable(vertical);
}

/* .btn-success */
.btn-success {
    &.active,
    &:active,
    &:hover,
    &.active.focus,
    &.active:focus,
    &.active:hover,
    &:active.focus,
    &:active:focus,
    &:active:hover {
        background-color: #9eb000;
        border-color: #9eb000;
    }
}

.open > .dropdown-toggle.btn-success {
    &, &.focus, &:focus, &:hover {
        background-color: #9eb000;
        border-color: #9eb000;
    }
}

/* .btn-primary */
.btn-primary {
    &.active,
    &:active,
    &:hover,
    &.active.focus,
    &.active:focus,
    &.active:hover,
    &:active.focus,
    &:active:focus,
    &:active:hover {
        background-color: #841893;
        border-color: #841893;
    }
}

.open > .dropdown-toggle.btn-primary {
    &, &.focus, &:focus, &:hover {
        background-color: #841893;
        border-color: #841893;
    }
}

/* .btn-info */
.btn-info {
    &.active,
    &:active,
    &:hover,
    &.active.focus,
    &.active:focus,
    &.active:hover,
    &:active.focus,
    &:active:focus,
    &:active:hover {
        background-color: #276ff5;
        border-color: #276ff5;
    }
}

.open > .dropdown-toggle.btn-info {
    &, &.focus, &:focus, &:hover {
        background-color: #007cb5;
        border-color: #007cb5;
    }
}

/* .btn-lg */
.btn-group-lg > .btn, .btn-lg {
    .my-heading-h3();
    font-size: 20px;
    line-height: 1;

    @base-padding: 11px;

    padding-top: @base-padding;
    padding-bottom: @base-padding + 3px;

    @media (min-width: @screen-md-min) {
        padding-bottom: @base-padding + 4px;
    }
}

/* Remove inner shadow active button */
.btn.active, .btn:active {
    box-shadow: none;
}

.fancybox-close {
    position: fixed;
    right: 30px;
    top: 20px;
    width: 24px;
    height: 24px;
    z-index: 8041;

    background: center center no-repeat url("../../assets/img/close.svg");
    background-size: 24px;
    opacity: .6;
    transition: all .2s;

    &:hover, &:active, &:focus {
        opacity: 1;
    }
}

.fancybox-skin {
    color: @text-color;
    border-radius: 0;
    box-shadow: none !important;
    background-color: transparent;
    //background: #fff;
    //margin-bottom: 50px;
}

.fancybox-nav {
    width: 150px;

    &:hover span {
        color: #fff;
        opacity: 1;
    }

    span {
        position: sticky;
        display: block;
        visibility: visible;
        opacity: .5;
        margin-top: -17px;
        top: 355px;

        width: 55px;
        height: 34px;

        transition: opacity .2s;
    }
}

.fancybox-prev {
    left: -150px;

    span {
        left: 0;
        transform: translateX(50px);
        background: left top no-repeat url("../img/slider-arrow.png");
        background-size: 55px 34px;
    }
}

.fancybox-next {
    right: -150px;

    span {
        right: 0;
        background: left top no-repeat url("../img/slider-arrow.png");
        background-size: 55px 34px;

        transform: rotate(180deg) translateX(-45px);
    }
}

.fancybox-type-image {
    max-width: ~"calc(100vw - 220px)";

    .fancybox-inner {
        max-width: ~"calc(100vw - 220px)";
    }

    .fancybox-nav {
        span {
            top: 50%;
        }
    }
}

.alert-block {
    text-align: left;
}

[data-rjs-processed="true"][width="0"][height="0"] {
    width: auto !important;
    height: auto !important;
}

.form-control {
    @media (min-width: @grid-float-breakpoint) {
        height: 75px;
    }
}

.form-group {
    @media (min-width: @grid-float-breakpoint) {
        margin-bottom: 50px;
    }
}

.scrollbar-light > .scroll-content.scroll-scrollx_visible {
    padding-bottom: 18px;
}

#fancybox-loading {
    background: none;
    margin-top: -170px/2;
    margin-left: -170px/2;
    opacity: 1;
}

#fancybox-loading div {
    width: 170px;
    height: 170px;

    background: center center no-repeat url("../../assets/img/load.gif");
    background-size: 170px;
}

html.smil #fancybox-loading div {
    background-image: url("../../assets/img/load.svg");
}

.fancybox-margin {
    margin-right: 0;
}

.container, .container-fluid {
    @media (max-width: @screen-xs-max) {
        margin-left: 0;
        margin-right: 0;
        width: 100%;
    }
}

.b-filter.swiper-container > .swiper-wrapper,
.b-portfolio-tag-outer .swiper-wrapper {
    @media (min-width: @screen-xl-min) {
        display: block;
        transform: none !important;
    }
}

.fancybox-inner {
    overflow: hidden !important;
}

.fancybox-inner .container {
    //width: auto !important;
    //padding-left: 0;
    //padding-right: 0;
}

.fancybox-inner .g-loader .container {
    width: 100% !important;
}

.fancybox-inner .fancybox-container {
    width: 100vw !important;
    //width: ~"calc(100vw - 10px)" !important;
    //width: 100% !important;
    //width: 100vw !important;
    //width: 1080px !important;
    padding: 80px 0 0;
    background: #fff;
}

.fancybox-overlay {
    top: 64px;
    background: transparent;
    border-radius: 15px;

    &::-webkit-scrollbar {
        background: transparent;
        width: 10px;
    }

    &::-webkit-scrollbar-thumb {
        background: #999 !important;
        border-radius: 5px;
    }

    overflow: hidden !important;

    .fancybox-container {
        width: 100vw !important;

        .b-arrows-container {
            //margin-left: -10px;
        }
    }
}

.fancybox-overlay_bg_white {
    background: #fff;

    overflow: auto !important;
    overflow-x: hidden !important;

    .fancybox-container {
        width: 100vw !important;

        //width: ~"calc(100vw - 10px)" !important;

        .b-arrows-container {
            //margin-left: 0;
        }
    }
}

.b-fancybox-overlay {
    background: fade(#161f6a, 80%);
    cursor: pointer;

    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    transition: all ease-in-out 0.2s;
    z-index: 8009;

    &:hover, &:active, &:focus {
        background: fade(#161f6a, 60%);

        .fancybox-close {
            opacity: 1;
        }
    }
}

@fancybox-nav-width: 150px;
@portfolio-item-gutter: 40px;

.b-fancybox-nav {
    position: absolute;
    top: 0;
    height: 100%;
    width: @fancybox-nav-width;

    background: #000;

    cursor: pointer;

    &:before {
        content: '';
        display: block;

        position: absolute;
        top: 50%;
        left: 50%;

        width: 102px;
        height: 102px;
        transform: translate(-50%, -50%);

        border-radius: 50%;
        border: 1px solid #EBEFFE;

        transition: all ease-in-out 0.2s;
    }

    &:hover, &:active, &:focus {
        &:before {
            border: 1px solid #2856F6;
        }
    }

    &.b-fancybox-prev {
        left: -@fancybox-nav-width;
        background: center center no-repeat url("../../assets/img/arrow-left.svg");
        background-size: 53px 26px;
    }

    &.b-fancybox-next {
        right: -@fancybox-nav-width;
        background: center center no-repeat url("../../assets/img/arrow-right.svg");
        background-size: 53px 26px;
    }
}

// @TODO: tmp
.fancybox-nav {
    display: none;
}

.b-arrows-container {
    padding: 0 @fancybox-nav-width + @portfolio-item-gutter;

    .container {
        max-width: 100%;
    }
}

.scrollbar-light > .scroll-element {
    background: @body-muted-bg;
}

.tab-content__responsive {
    & > .tab-pane {
        @media (min-width: @screen-lg-min) {
            display: block;
        }
    }
}

img.lazy {
    opacity: 0;
}

